chore: remove parent.pom, prepare for github actions